# pge

./: .gitignore  README.md  layout.ini  test.scene  test.world
data/Dungeon Pack Export/: Altar_01.mesh  Altar_02.mesh  Arena_01.mesh  Barrel_01.mesh  Barrel_02.mesh  Barrel_03.mesh  Bed_01.mesh  Bed_02.mesh  Bed_03.mesh  Bed_04.mesh  Bed_05.mesh  Bed_06.mesh  Bench_01.mesh  BlacksmithHammer_01.mesh  Blacksmith_01.mesh  Blacksmith_02.mesh  Blacksmith_03.mesh  Blacksmith_04.mesh  Blacksmith_05.mesh  Bone_01.mesh  Bone_02.mesh  Book_01.mesh  Book_02.mesh  Book_03.mesh  Book_04.mesh  Book_05.mesh  Book_06.mesh  Book_07.mesh  Book_08.mesh  Book_09.mesh  Book_10.mesh  Book_11.mesh  Book_12.mesh  Bottle_01.mesh  Bottle_02.mesh  Bottle_03.mesh  Bottle_04.mesh  Bottle_05.mesh  Bottle_06.mesh  Bottle_07.mesh  (+241 more)
data/Vampire/: Vampire.mat  Vampire.mesh  Vampire.skel  Vampire_animconf.json  Vampire_idle.skelanim  Vampire_walk.skelanim
data/effects/: animated.effect  default.effect  depth.effect  screentex.effect  shadow.effect
data/materials/: checkers.mat
data/meshes/Barrel_01/: Barrel_01.mesh
data/meshes/cube/: Cube.001.mesh
data/meshes/suzanne/: Suzanne.001.mat  Suzanne.001.mesh
data/scripts/: test.lua
docs/: packages.txt
source/: .clang-format  CMakeLists.txt  CMakeSettings.json
source/PGEAnimation/: CMakeLists.txt
source/PGEAnimation/include/: anim_animator.h  anim_easing.h  anim_skeleton.h
source/PGEAnimation/src/: anim_animator.cpp  anim_skeleton.cpp
source/PGECore/: CMakeLists.txt
source/PGECore/include/: core_assert.h  core_display.h  core_display_win32.h  core_file_utils.h  core_fileutils.h  core_log.h
source/PGECore/src/: core_display_win32.cpp  core_file_utils.cpp  core_fileutils.cpp  core_log.cpp
source/PGEDiagnostics/: CMakeLists.txt
source/PGEDiagnostics/include/: diag_assert.h  diag_log.h
source/PGEDiagnostics/src/: diag_log.cpp
source/PGEEditor/: CMakeLists.txt
source/PGEEditor/include/: edit_camera.h  edit_command.h  edit_component.h  edit_editor.h  edit_editor_views.h  edit_entity.h  edit_events_win32.h  edit_game_view.h  edit_light.h  edit_mesh.h  edit_script.h  edit_transform.h
source/PGEEditor/src/: edit_camera.cpp  edit_command.cpp  edit_editor.cpp  edit_editor_views.cpp  edit_editor_win32.cpp  edit_entity.cpp  edit_light.cpp  edit_mesh.cpp  edit_script.cpp  edit_transform.cpp  main.cpp
source/PGEGame/: CMakeLists.txt
source/PGEGame/include/: game_animation.h  game_behaviour.h  game_camera.h  game_entity.h  game_light.h  game_mesh.h  game_renderer.h  game_scene.h  game_script.h  game_static_mesh.h  game_transform.h  game_world.h
source/PGEGame/src/: game_animation.cpp  game_behaviour.cpp  game_camera.cpp  game_entity.cpp  game_light.cpp  game_mesh.cpp  game_renderer.cpp  game_scene.cpp  game_script.cpp  game_static_mesh.cpp  game_transform.cpp  game_world.cpp
source/PGEGraphics/: CMakeLists.txt
source/PGEGraphics/include/: gfx_buffer.h  gfx_debug_draw.h  gfx_graphics_adapter.h  gfx_graphics_adapter_d3d11.h  gfx_graphics_device.h  gfx_pixel_format_d3d11.h  gfx_render_target.h  gfx_sampler.h  gfx_shader.h  gfx_texture.h  gfx_vertex_layout.h
source/PGEGraphics/src/: gfx_buffer_d3d11.cpp  gfx_debug_draw.cpp  gfx_graphics_adapter_d3d11.cpp  gfx_graphics_device_d3d11.cpp  gfx_render_target_d3d11.cpp  gfx_sampler_d3d11.cpp  gfx_shader_d3d11.cpp  gfx_texture_d3d11.cpp  gfx_vertex_layout_d3d11.cpp
source/PGEInput/: CMakeLists.txt
source/PGEInput/include/: input_events_win32.h  input_keyboard.h  input_mouse.h
source/PGEInput/src/: input_keyboard_win32.cpp  input_mouse_win32.cpp
source/PGEMath/include/: math_aabb.h  math_constants.h  math_interp.h  math_mat4x4.h  math_quat.h  math_raycasting.h  math_rect.h  math_vec2.h  math_vec3.h  math_vec4.h
source/PGEOS/: CMakeLists.txt
source/PGEOS/include/: os_display.h  os_display_win32.h  os_file.h
source/PGEOS/src/: os_display_win32.cpp
source/PGERenderer/: CMakeLists.txt
source/PGERenderer/include/: rend_renderer.h
source/PGEResource/: CMakeLists.txt
source/PGEResource/include/: res_animator.h  res_effect.h  res_material.h  res_mesh.h  res_resource_manager.h  res_skeleton.h  res_texture2d.h
source/PGEResource/src/: res_animator.cpp  res_effect.cpp  res_material.cpp  res_mesh.cpp  res_resource_manager.cpp  res_skeleton.cpp  res_texture2d.cpp
source/Sandbox/PGESandbox/: CMakeLists.txt
source/Sandbox/PGESandbox/include/: behaviour.h
source/Sandbox/PGESandbox/src/: main.cpp
source/Sandbox/PGEVoronoi/: CMakeLists.txt
source/Sandbox/PGEVoronoi/src/: main.cpp
source/Tests/: CMakeLists.txt
source/Tests/PGEGame/: CMakeLists.txt
source/Tests/PGEMath/: CMakeLists.txt  test_math_mat4x4.cpp  test_math_quat.cpp  test_math_vec2.cpp  test_math_vec3.cpp  test_math_vec4.cpp
source/Tools/ModelConvert/: CMakeLists.txt
source/Tools/ModelConvert/src/: main.cpp
