cmake_minimum_required(VERSION 3.15)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

project(pge)
add_subdirectory(External/imgui)
add_subdirectory(External/lua)
add_subdirectory(PGECore)
add_subdirectory(PGEInput)
add_subdirectory(PGEGraphics)
add_subdirectory(PGEResource)
add_subdirectory(PGEGame)
add_subdirectory(PGEEditor)
add_subdirectory(Sandbox/PGESandbox)
add_subdirectory(Sandbox/PGEVoronoi)
add_subdirectory(Tools/ModelConvert)
add_subdirectory(Tests)